Initialize faucet validator

--- a/ppbl2023-plutus-template.cabal
+++ b/ppbl2023-plutus-template.cabal
@@ -51,6 +51,7 @@ library
                     , Tokens.Minter
                     , PPBLNFT.Compiler
                     , PPBLNFT.Minter
+                    , FaucetMiniProject.Validator
 
   build-depends:       base ^>=4.14.3.0
                     , aeson
