Prepare faucet mini project

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ bash-scripts/metadata.json
 bash-scripts/ppbl-nft.json
 
 bash-scripts/metadata/
+bash-scripts/faucet-mini-project/project-variables-private.sh
