--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 dist-newstyle/
 
 
-bash-scripts/variables-private.sh
-bash-scripts/metadata.json
-bash-scripts/ppbl-nft.json
+# bash-scripts/variables-private.sh
+# bash-scripts/metadata.json
+# bash-scripts/ppbl-nft.json
 
-bash-scripts/metadata/
-bash-scripts/faucet-mini-project/project-variables-private.sh
+# bash-scripts/metadata/
+# bash-scripts/faucet-mini-project/project-variables-private.sh
